--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@storybook/addons": "5.0.10",
+    "@storybook/components": "^5.0.10",
     "react": "^16.8.1"
   },
   "publishConfig": {
