Update storybook-addon-i18n package.json for addon-catalog

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "addon",
     "i18n",
     "react",
-    "storybook"
+    "storybook",
+    "storybook-addon",
+    "test"
   ],
   "homepage": "https://github.com/goooseman/storybook-addon-i18n",
   "bugs": {
